--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,13 @@
 AllCops:
   TargetRubyVersion: 3.0
+  NewCops: disable
+  SuggestExtensions: false
 
 Style/StringLiterals:
   EnforcedStyle: double_quotes
 
 Style/StringLiteralsInInterpolation:
   EnforcedStyle: double_quotes
+
+Style/Documentation:
+  Enabled: false
